--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "rimraf": "rimraf",
     "tslint": "tslint",
-    "typings": "node node_modules/typings/dist/bin.js",
+    "typings": "typings",
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server",
     "webdriver-manager": "webdriver-manager",
@@ -33,7 +33,7 @@
     "prebuild:dev": "npm run clean:dist",
     "build:dev": "webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
     "prebuild:prod": "npm run clean:dist",
-    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached --bail",
+    "build:prod": "webpack --config config/webpack.prod.js --display-error-details --bail",
     "server": "npm run server:dev",
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/",
     "server:prod": "http-server dist --cors",
